# wopr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TWAT_2.0_Architecture_Guide.md  defaults  notes.md  settags.sh  settags2.sh  settags3.sh  wopr-baseapp-1.0.10.tgz  wopr-baseapp-1.0.11.tgz  wopr-baseapp-1.0.17.tgz  wopr-baseapp-1.0.26.tgz  wopr-baseapp-1.0.3.tgz  wopr-baseapp-1.0.4.tgz  wopr-baseapp-1.0.5.tgz  wopr-baseapp-1.0.6.tgz
backups/: wopr-backup.dump
config/: wopr.config.yaml  wopr.production.config.yaml
corecontrol/: wopr.argoappset.yaml
docs/: architecture.md  decisions.md  diagram-v0.1.0.md  diagram_current.md  dos_and_donts.md  file_headers.md  license_headers.txt  status.md  status_updated.md  ui.md  what_is_wopr-v0.1.0.md  what_is_wopr_updated.md  workflows.md
helm/: wopr-config-service-0.1.0.tgz
learn/: index.html  panel.html
new/: test.sh
pymod/: wopr.tgz
pymod/wopr/: config.py  constants.py  logging.py  pyproject.toml  setup.py  storage.py
pymods/wopr-core/: pyproject.toml  setup.py
pymods/wopr-core/docs/: README.md
pymods/wopr-core/examples/: camera.py
pymods/wopr-core/tests/: test_storage.py
pymods/wopr-core/wopr/: __init__.py  config.py  constants.py  logging.py  storage.py  tracing.py
scripts/: add-configs.sh  createissues.sh  createissues2.sh  (+6 more)
systems/wopr-cam/container/: Dockerfile  app.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
systems/wopr-cam/container/wopr-pymod/: pyproject.toml  setup.py
systems/wopr-cam/container/wopr-pymod/wopr/: __init__.py  config.py  constants.py  logging.py
(+628 files in other folders)
