[build-system]
requires = [
    "setuptools>=68.0", "wheel",
    "flask>=3.0"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "wopr-cam"
version = "0.1.0"
description = "Cam service for WOPR"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]